<resources>
  <string name="app_name">PianoAurora</string>
  <string name="send">SEND</string>
  <string name="write_some_command">write some command</string>
  <string name="write_service_ip">192.168.4.1</string>
  <string name="init">INIT</string>
  <string name="tv_loading_aduio">正在加载音频，请稍等~~</string>
  <string name="image">image</string>
  <string name="load_success">加载音频成功,开始你的炫酷之旅吧~~</string>
  <string name="load_fail">加载音频失败了诶，试试重新打开应用吧</string>
  <string name="auto_play">开始自动播放%1$s~~</string>
  <string name="music_list">乐谱列表</string>
  <string name="add_music">添加乐谱</string>
  <string name="about">关于</string>
  <string name="tv_music_list">乐谱列表</string>
  <string name="file_not_exist">文件不存在</string>
  <string name="read_file_exception">读取配置文件出错</string>
  <string name="config_file_wrong">配置文件有问题</string>
  <string name="tune_length_not_one">音调不正确</string>
  <string name="tune_not_in_range">音调超出范围</string>
  <string name="frequency_not_number">频率不是数字</string>
  <string name="frequency_not_in_range">频率超出范围</string>
  <string name="no_music_name">配置文件没有名称</string>
  <string name="music_note_config_wrong">音符节点[ %1$s ]配置有问题</string>
  <string name="file_is_directory">请选择文件</string>
  <string name="file_too_big">文件过大</string>
  <string name="auto_paly_end">自动播放结束</string>
  <string name="unknown_error">未知错误</string>
  <string name="add_music_success">添加乐谱成功</string>
  <string name="teacher_hint">指导老师 :\u0020</string>
  <string name="teacher">刘士营老师</string>
  <string name="ui_hint">UI :\u0020</string>
  <string name="ui">孙宇科 ( 动画14–1 )</string>
  <string name="developer_hint">开发 :\u0020</string>
  <string name="developer">程涛 ( 计算机14–1 )</string>
  <string name="project_address"><font color='#000'>项目地址 : </font><a>http://paradisehell.org/2017/03/06/the-fisrt-my-own-project</a></string>
  <string name="config">配置</string>
  <string name="ask_permission">请赋予权限</string>
  <string name="delete">删除</string>
</resources>
