<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >
  <ImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_gravity="center"
      android:contentDescription="@string/app_name"
      android:src="@mipmap/icon"
      />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="8dp"
      android:text="@string/app_name"
      android:textColor="#000000"
      android:textSize="18sp"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/teacher_hint"
        android:textColor="#000"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:textColor="#666"
        android:textSize="16sp"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/ui_hint"
        android:textColor="#000"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui"
        android:textColor="#666"
        android:textSize="16sp"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/developer_hint"
        android:textColor="#000"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textColor="#666"
        android:textSize="16sp"
        />
  </LinearLayout>
  <TextView
      android:id="@+id/tv_project_address"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:autoLink="all"
      android:textColor="#666"
      android:textSize="16sp"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/config"
        />
  </RelativeLayout>
</LinearLayout>