<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
  <TextView
      android:id="@+id/tv_music_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/music_list"
      style="@style/TextList"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="#333333"
      />
  <TextView
      android:id="@+id/tv_add_music"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/add_music"
      style="@style/TextList"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="#333333"
      />
  <TextView
      android:id="@+id/tv_about"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about"
      style="@style/TextList"
      />
</LinearLayout>